--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
               <tr>
                 <td>VerseNote To The Right</td>
                 <td>
-                  <button class="eng2grk_sup_btns" id="show_versenote_totheright" onclick="checkUncheck(show_versenote_totheright_check),showVersenoteToTheRight()"  title="Center Settings Horizontally"><input type="checkbox" id="show_versenote_totheright_check" name="show_versenote_totheright_check" value="Show VerseNotes On the Side">Right Side Versnote</button>
+                  <button class="eng2grk_sup_btns" id="show_versenote_totheright" onclick="checkUncheck(show_versenote_totheright_check),showVersenoteToTheRight()"  title="Center Settings Horizontally"><input type="checkbox" id="show_versenote_totheright_check" name="show_versenote_totheright_check" value="Show VerseNotes On the Side">Right Side Versenote</button>
                 </td>
               </tr>
               <tr>
@@ -308,6 +308,9 @@
           </div>
         </div>
         <div id="bibleapp_available_notes" class="slideoutofview displaynone">
+          <button class="eng2grk_sup_btns" id="show_versenote_totheright_2" onclick="show_versenote_totheright.click()"  title="Center Settings Horizontally"><input type="checkbox" id="show_versenote_totheright_2_check" name="show_versenote_totheright_2_check" value="Show VerseNotes On the Side">Right Side Versenote</button>
+          <div id="biblenotes_nav"></div>
+
         </div>
         <div id="bibleapp_versemarkers" class="slideoutofview displaynone">
           <details>
