--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@
             </div>
             <div id="bibleversions_btns">
             </div>
+            <div id="bookmarks_holder" class="displaynone">
+              <div id="bookmark_head">Bookmarks</div>
+                <ol id="bookmark_content">
+              </ol>
+            </div>
           </div>
         </div>
       <div id="titlebarsearchparameters" class="slideup">
