--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <div id="otherButtonsInHead">
               <button id="opensearch" class="footersection" onclick="hideRefNav(null,searchPreviewWindowFixed)" title="Open Search"><img src="images/search-svgrepo-com(2).svg" alt="..."></button>
               <button id="scriptureCompareWinDetacher_inHeader" onclick="hideRefNav(null,scriptureCompareWindow)" title="Compare Passages Side by Side"><img src="images\scale-gold.svg" alt="⚖"style="transform:scale(1.5)"></button>
-              <button id="noteDetacher_inHeader" onclick="detachInlineVerseNote(),checkUncheck(notedetach_check)" title="detach inline versenote"><input type="checkbox" id="notedetach_check">N-D</button>
+              <button id="noteDetacher_inHeader" onclick="detachInlineVerseNote()" title="detach inline versenote"><input type="checkbox" id="notedetach_check">N-D</button>
             </div>
             <div id="bookmarks_holder">
               <div id="bookmark_head">
