--- a/index.html
+++ b/index.html
@@ -337,18 +337,20 @@
             <button style="flex-basis: 50%;" onclick="changeBackGround('default','url(images/background.jpg)','--ref-img','--buttons','--whitesmoke')">Default</button>
           </div>
           <div>
-            <div class="settingssectionheadings">Shortcut Keys</div>
-            <ul>
-              <li>Alt + T: Toggle Showing translated word when the displayed word is the Lemma Transliteration</li>
-              <li>Alt + Z: Detach Versnote and Center it on the page.</li>
-              <li>Alt + T: Toggle Showing Hebrew/Greek Lemma Transliteration</li>
-              <li>Alt + H: Toggle highlighting hovered version</li>
-              <li>Ctrl + Up Arrow Key: Go to previous chapter</li>
-              <li>Ctrl + Down Arrow Key: Go to next chapter</li>
-              <li>Ctrl + Shift + F: Search for highlighted text</li>
-              <li>Ctrl + Shift + Z: Toggle Side Nav <i>does not work if any input has the focus</i>.</li>
-              <li>Escape: Toggle Showing side and top bar and their contents</li>
-            </ul>
+            <!-- <details class="settings"> -->
+              <div class="settingssectionheadings">Shortcut Keys</div>
+              <ul>
+                <li><b>Alt + T</b>: Toggle Showing translated word when the displayed word is the Lemma Transliteration</li>
+                <li><b>Alt + Z</b>: Detach Versnote and Center it on the page.</li>
+                <li><b>Alt + T</b>: Toggle Showing Hebrew/Greek Lemma Transliteration</li>
+                <li><b>Alt + H</b>: Toggle highlighting hovered version</li>
+                <li><b>Ctrl + Up Arrow Key</b>: Go to previous chapter</li>
+                <li><b>Ctrl + Down Arrow Key</b>: Go to next chapter</li>
+                <li><b>Ctrl + Shift + F</b>: Search for highlighted text</li>
+                <li><b>Ctrl + Shift + Z</b>: Toggle Side Nav <i>does not work if any input has the focus</i>.</li>
+                <li><b>Escape</b>: Toggle Showing side and top bar and their contents</li>
+              </ul>
+            <!-- </details> -->
           </div>
         </div>
         <div id="bibleapp_available_notes" class="slideoutofview displaynone">
